--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,17 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-packages = [{include = "learn_modern_developing"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^5.1.2"
+environs = "^11.0.0"
+django-cors-headers = "^4.5.0"
+dj-database-url = "^2.3.0"
+drf-spectacular = "^0.27.2"
+djangorestframework = "^3.15.2"
+psycopg = "^3.2.3"
+gunicorn = "^23.0.0"
 
 
 [build-system]
